// Vitest Snapshot v1

exports[`render > table no fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 50ms
total diff: --100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|10|-0|
|b|10|--10|
|c|10|--20|
|d|10|--30|
|e|10|--40|

</details>



### case2

total: 50ms
total diff: --100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|10|-0|
|b|10|--10|
|c|10|--20|
|d|10|--30|
|e|10|--40|

</details>

"
`;

exports[`render > table with fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 50ms
total diff: --100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|10|-0|
|b|b|10|--10|
|c|c|10|--20|
|d|d|10|--30|
|e|e|10|--40|

</details>



### case2

total: 50ms
total diff: --100ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|10|-0|
|b|b|10|--10|
|c|c|10|--20|
|d|d|10|--30|
|e|e|10|--40|

</details>

"
`;
